<resources>
    <string name="app_name">Surveys App</string>
    <string name="sign_out">Sign out</string>
    <string name="new_survey">New survey</string>
    <string name="my_surveys">My surveys</string>
    <string name="publish">Publish</string>
    <string name="essay">Essay</string>
    <string name="single_answer">Single answer</string>
    <string name="multiple_answers">Multiple answer</string>
    <string name="survey_title">Survey title</string>
    <string name="question">Question</string>
    <string name="add_answer">Add answer</string>
    <string name="submit">Submit</string>
    <string name="add_option">Add option</string>
    <string name="option">option</string>
    <string name="enter_option">Enter option</string>
    <string name="remove_option">Remove option</string>
    <string name="type">type</string>
    <string name="fill_blanks">Please fill blanks</string>
    <string name="search">Search</string>
    <string name="pin">pin</string>
    <string name="questions">questions</string>
    <string name="position">position</string>
    <string name="options">options</string>
    <string name="add_survey_title">Add survey title</string>
    <string name="no_questions_added">No question added</string>
    <string name="users">users</string>
    <string name="survey_published_successfully">Survey published successfully</string>
    <string name="surveys">surveys</string>
    <string name="results">results</string>
    <string name="survey">survey</string>
    <string name="answers">answers</string>
    <string name="type_your_answer">Type your answer</string>
    <string name="answer_all_questions">Answer all questions</string>
    <string name="next">Next</string>
    <string name="progress">%d/%d</string>
    <string name="pic_url">https://i.stack.imgur.com/dr5qp.jpg</string>
    <string name="question_count">%d Questions</string>
    <string name="cancel">Cancel</string>
    <string name="no_search_results">No search results</string>
    <string name="is_searching">Is searching</string>
    <string name="search_word">Search word</string>
    <string name="input_text">Input field</string>
    <string name="empty_surveys_message">No surveys to show</string>
    <string name="empty_surveys_sub_message">Invite your friends to add surveys. You can poll on others surveys only Once.</string>
    <string name="new_question">New question</string>
    <string name="positions">Positions</string>
    <string name="answer_the_question">Answer the question</string>
    <string name="poll_submitted">Poll submitted</string>
    <string name="you_have_no_surveys">You have no surveys</string>
    <string name="id">id</string>
    <string name="survey_has_no_results">Survey has no results</string>
    <string name="result">result</string>
    <string name="answer">asnwer</string>
    <string name="check_network_connection">Check network connection</string>
    <string name="retry">Retry</string>
    <string name="warning">Warning</string>
    <string name="deleting_question_message">Delete question ?</string>
    <string name="yes">Yes</string>
    <string name="no_pinned_survey">No pinned survey</string>
    <string name="survey_pinned">Survey pinned</string>
    <string name="title">title</string>
    <string name="loading">Loading</string>
</resources>